--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
-  background-color: black;
-  color: white;
+  background-color: var(--grey1000);
+  color: var(--grey400);
   height: 100vh;
   width: 100vw;
   display: flex;
