--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
-  background-color: var(--grey1000);
-  color: var(--grey400);
+  color: whitesmoke;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   height: 100vh;
   width: 100vw;
   display: flex;
