--- a/src/components/Box.module.css
+++ b/src/components/Box.module.css
@@ -1,28 +1,8 @@
-:root {
-  --grey50: #fafafa;
-  --grey100: #f5f5f5;
-  --grey200: #eeeeee;
-  --grey300: #e0e0e0;
-  --grey400: #bdbdbd;
-  --grey500: #9e9e9e;
-  --grey600: #757575;
-  --grey700: #616161;
-  --grey800: #424242;
-  --grey850: #323232;
-  --grey900: #212121;
-  --grey950: #111111;
-  --grey1000: #010101;
-  --saekiblack: #080808;
-  --saekiyellow: #f3e600;
-}
-
 .Box {
-  border-radius: 10px;
+  width: 100%;
+  height: 100%;
 
-  width: 75%;
-  height: 75%;
-
-  background-color: var(--grey950);
+  background-color: #0b0b11;
 
   display: flex;
   flex-direction: row;
