--- a/src/components/BoxLeft.module.css
+++ b/src/components/BoxLeft.module.css
@@ -1,47 +1,149 @@
-:root {
-  --grey50: #fafafa;
-  --grey100: #f5f5f5;
-  --grey200: #eeeeee;
-  --grey300: #e0e0e0;
-  --grey400: #bdbdbd;
-  --grey500: #9e9e9e;
-  --grey600: #757575;
-  --grey700: #616161;
-  --grey800: #424242;
-  --grey850: #323232;
-  --grey900: #212121;
-  --grey925: #202020;
-  --grey950: #111111;
-  --grey1000: #010101;
-  --saekiblack: #080808;
-  --saekiyellow: #f3e600;
-}
+/* BORDER */
+/* COLORS */
+/* DISPLAY */
+/* MARGIN, PADDING */
+/* FONTS */
 
 .BoxLeft {
-  border-right: 2px solid var(--grey1000);
+  /* BORDER */
+  /* border: 2px solid; */
+  border-radius: 5px;
+  /* COLORS */
+  background-color: #15151b;
+  /* DISPLAY */
   flex: 1;
-  padding: 5px;
+  /* MARGIN, PADDING */
+  padding: 20px;
 }
 
-.list {
+/* ------------------ */
+/* ----CATEGORY------------- */
+/* ------------------ */
+
+.category {
+  /* BORDER */
   /* border: 2px solid; */
-  border-radius: 10px;
+  /* DISPLAY */
   display: flex;
   flex-direction: row;
   align-items: center;
+  /* MARGIN, PADDING */
   padding: 5px;
+}
+.category > .image {
+  /* BORDER */
+  /* border: 2px solid; */
+  /* DISPLAY */
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  /* MARGIN, PADDING */
+  /* margin-left: 10px; */
+}
+.category > .label {
+  /* BORDER */
+  /* border: 2px solid; */
+  /* DISPLAY */
+  flex: 4;
+}
+
+/* ------------------ */
+/* ----PLAN------------- */
+/* ------------------ */
+
+.plan {
+  /* BORDER */
+  /* border: 2px solid; */
+  border-radius: 5px;
+  /* DISPLAY */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* MARGIN, PADDING */
+  padding: 5px;
+  /* OTHER */
+  cursor: pointer;
+}
+.plan > .image {
+  /* BORDER */
+  /* border: 2px solid; */
+  /* DISPLAY */
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  /* MARGIN, PADDING */
+  margin-left: 15px;
+}
+.plan > .label {
+  /* BORDER */
+  /* border: 2px solid; */
+  /* DISPLAY */
+  flex: 4;
+}
+
+.plan:hover {
+  /* COLORS */
+  background-color: #1d2836;
+}
+
+/* ------------------ */
+/* ----BUTTONS------------- */
+/* ------------------ */
+
+.addPlanButton {
+  /* SIZE */
+  width: 100%;
+  /* BORDER */
+  border: 0px;
+  border-radius: 5px;
+  /* COLORS */
+  background-color: #15151b;
+  color: whitesmoke;
+  /* DISPLAY */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* MARGIN, PADDING */
+  padding: 10px;
+  /* FONTS */
+  text-align: left;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  font-weight: 600;
+  font-size: 1rem;
+  /* OTHER */
   cursor: pointer;
 }
 
-.list:hover {
-  background-color: var(--grey900);
+.addPlanButton > .image {
+  /* BORDER */
+  /* border: 2px solid; */
+  /* DISPLAY */
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  /* MARGIN, PADDING */
+}
+.addPlanButton > .label {
+  /* BORDER */
+  /* border: 2px solid; */
+  /* DISPLAY */
+  flex: 4;
+}
+.addPlanButton > .config {
+  /* BORDER */
+  /* border: 2px solid; */
+  /* DISPLAY */
+  flex: 1;
 }
 
-.list > .listCircle {
-  width: 15px;
-  height: 15px;
-  /* border: 2px solid; */
-  border-radius: 15px;
-  margin-left: 5px;
-  margin-right: 5px;
+.addPlanButton:hover {
+  /* COLORS */
+  background-color: #1d2836;
+  padding: 6px;
 }
