--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   color: whitesmoke;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  font-family: "Quicksand", sans-serif;
   height: 100vh;
   width: 100vw;
   display: flex;
