--- a/src/components/BoxRight.module.css
+++ b/src/components/BoxRight.module.css
@@ -57,7 +57,7 @@
   /* DISPLAY */
   display: flex;
   flex-direction: row;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
 }
 
