--- a/src/components/BoxLeft.module.css
+++ b/src/components/BoxLeft.module.css
@@ -143,7 +143,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .addPlanButton:hover {
