--- a/src/components/BoxRight.module.css
+++ b/src/components/BoxRight.module.css
@@ -59,6 +59,37 @@
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
+  /* POSITION */
+  position: relative;
+}
+.plan > .planHeader > .config > .reactIconContainer {
+  /* BORDER */
+  /* border: 2px solid; */
+  border-radius: 5px;
+  /* DISPLAY */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.plan > .planHeader > .config > .reactIconContainer:hover {
+  background-color: #1d2836;
+}
+
+.plan > .planHeader > .config > .configBox {
+  /* BORDER */
+  /* border: 2px solid; */
+  border-radius: 5px;
+  /* SIZE */
+  width: 300px;
+  height: 200px;
+  /* POSITION */
+  position: absolute;
+  z-index: 1;
+  top: 0px;
+  left: -150px;
+  /* COLORS */
+  background-color: #1d2836;
 }
 
 /* ------------------ */
