--- a/src/components/BoxLeft.module.css
+++ b/src/components/BoxLeft.module.css
@@ -12,6 +12,9 @@
   background-color: #15151b;
   /* DISPLAY */
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   /* MARGIN, PADDING */
   padding: 20px;
 }
@@ -93,61 +96,3 @@
 /* ------------------ */
 /* ----BUTTONS------------- */
 /* ------------------ */
-
-.addPlanButton {
-  /* SIZE */
-  width: 100%;
-  /* BORDER */
-  border: 0px;
-  border-radius: 5px;
-  /* COLORS */
-  background-color: #15151b;
-  color: whitesmoke;
-  /* DISPLAY */
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  /* MARGIN, PADDING */
-  padding: 10px;
-  /* FONTS */
-  text-align: left;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-  font-weight: 600;
-  font-size: 18px;
-  /* OTHER */
-  cursor: pointer;
-}
-
-.addPlanButton > .image {
-  /* BORDER */
-  /* border: 2px solid; */
-  /* DISPLAY */
-  flex: 1;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  /* MARGIN, PADDING */
-}
-.addPlanButton > .label {
-  /* BORDER */
-  /* border: 2px solid; */
-  /* DISPLAY */
-  flex: 4;
-}
-.addPlanButton > .config {
-  /* BORDER */
-  /* border: 2px solid; */
-  /* DISPLAY */
-  flex: 1;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.addPlanButton:hover {
-  /* COLORS */
-  background-color: #1d2836;
-  padding: 6px;
-}
