--- a/src/components/Plan.module.css
+++ b/src/components/Plan.module.css
@@ -224,6 +224,17 @@
   /* FONTS */
   font-size: 18px;
 }
+.plan > .planContent > .task > .delete {
+  /* BORDER */
+  /* border: 2px solid; */
+  /* SIZE */
+  flex: 1;
+  /* DISPLAY */
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
 
 /* ------------------ */
 /* ----FOOTER------------- */
