--- a/src/components/BoxRight.module.css
+++ b/src/components/BoxRight.module.css
@@ -8,6 +8,8 @@
 .BoxRightEmpty {
   /* DISPLAY */
   flex: 3;
+  display: flex;
+  flex-direction: column;
   /* MARGIN, PADDING */
   padding: 20px;
   /* DISPLAY */
